# Linux-Studex-

./: .gitignore  .tmux.conf  README.md  auto-push.sh  dashboard.html
scripts/: cursor  orbit.sh  setup-naledi.sh
sdk/node/: README.md  agent.js  cli.js  client.js  index.js  mcp.js  orchestrator.js  package.json  sandbox.js  studex.js
sdk/python/: README.md  pyproject.toml
sdk/python/studex/: __init__.py  _client.py  _exceptions.py  _types.py  agent.py  cli.py  orchestrator.py  sandbox.py
sdk/python/studex/mcp/: __init__.py  client.py
sdk/python/studex/tools/: __init__.py  base.py
sdk/python/studex_sdk/: __init__.py  agent.py  cli.py  client.py  mcp.py  orchestrator.py  sandbox.py
sdk/python/studex_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: generated.txt  index.js  package-lock.json  package.json
server/agents/: base.js  cashclaw.js  cursor.js  farm.js  hermes.js  openhuman.js
server/lib/: llm-mesh.js  logger.js  mcp.js  orchestrator.js  sandbox.js
server/logs/cashclaw/: 2026-06-01.md  2026-06-03.md
server/logs/cursor/: 2026-06-01.md  2026-06-03.md
server/logs/farm/: 2026-06-01.md  2026-06-03.md
server/logs/hermes/: 2026-06-01.md  2026-06-02.md  2026-06-03.md
server/logs/openhuman/: 2026-06-01.md  2026-06-02.md  2026-06-03.md
server/routes/: agents.js  llm-mesh.js  mcp.js  network.js  orchestrate.js  sandbox.js  status.js
