[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "studex-sdk"
version = "0.1.0"
description = "Python SDK for the StudEx Agent Operating System — sandbox, MCP, orchestration, and agent APIs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "StudEx Group", email = "dev@stud.exchange"},
]
keywords = ["studex", "agent", "sandbox", "mcp", "ai", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/TumeloRamaphosa/Linux-StudEx-"
Repository = "https://github.com/TumeloRamaphosa/Linux-StudEx-"
Documentation = "https://github.com/TumeloRamaphosa/Linux-StudEx-/tree/main/sdk/python"

[project.scripts]
studex = "studex_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["studex_sdk*"]
